# Lidar-Ground-Removal

./: .gitignore  CMakeLists.txt  Dependency.cmake  README.md
config/: config.yaml
include/: carla_manager.h  ground_removal.h  lidar_manager.h  lidar_processor.h  threadsafe_queue.h  utils.h
src/: carla_manager.cpp  lidar_manager.cpp  lidar_processor.cpp  main.cpp  utils.cpp
